--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,15 @@ body {
     @apply bg-[#171717] text-foreground;
   }
 }
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
